<resources>
    <string name="app_name">Persistencia</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="fullname">Julio Leonardo</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="mensaje_saldo_actual">Su saldo actual:</string>
    <string name="balance">S/ 700.00</string>
    <string name="content_description_fab_button">Ir a configuracion</string>
    <string name="irAInicio">Ir a Inicio</string>
</resources>